{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 213,
  "lineage": "3f22dfdd-86cd-bd56-6134-ddc63c087064",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8e5cfe85e85b81b",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-06ea7d95b21a1a1e6",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-06ea7d95b21a1a1e6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "conrad-bohm-eng48-first-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0deeb854f56412d88",
            "private_dns": "ip-10-0-0-41.eu-west-1.compute.internal",
            "private_ip": "10.0.0.41",
            "public_ip": "52.210.179.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00f0f4eb2a81c46e5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069b11bc09eb3bda8",
            "tags": {
              "Name": "Eng48-conrad-bohm-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0027c7b77d3118499"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_cb",
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b2b2db49b0c1a0d",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-007b25780562299c9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-007b25780562299c9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0dcb090fced4b6a6d",
            "private_dns": "ip-10-0-1-146.eu-west-1.compute.internal",
            "private_ip": "10.0.1.146",
            "public_ip": "34.240.200.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b2787194f5cd141d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-027a19961945622b6",
            "tags": {
              "Name": "Eng48-conrad-bohm-db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d4b4710ab87d422d"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-064b657993e7a05a4",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-conrad-bohm-app"
            },
            "vpc_id": "vpc-06f6d498f004a4df1"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d121b3079bb1d169",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-064b657993e7a05a4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng48-conrad-bohm-app"
            },
            "vpc_id": "vpc-06f6d498f004a4df1"
          },
          "dependencies": [
            "aws_internet_gateway.app_gw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d47569366e467fa0",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Eng48-conrad-bohm-db"
            },
            "vpc_id": "vpc-06f6d498f004a4df1"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080793bbecfbcc096",
            "route_table_id": "rtb-0d121b3079bb1d169",
            "subnet_id": "subnet-069b11bc09eb3bda8"
          },
          "dependencies": [
            "aws_internet_gateway.app_gw",
            "aws_vpc.app_vpc",
            "module.app.aws_route_table.app_route",
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6869c0bfb60fbf0",
            "route_table_id": "rtb-0d47569366e467fa0",
            "subnet_id": "subnet-027a19961945622b6"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.db.aws_route_table.priv_route",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_cb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0027c7b77d3118499",
            "description": "Allow :80 inbound traffic - Eng48-conrad-bohm-app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0027c7b77d3118499",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "212.161.55.68/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Eng48-conrad-bohm-app",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng48-conrad-bohm-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f6d498f004a4df1"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0fc501d506ced4f2b",
            "description": "Allow traffic from app",
            "egress": [],
            "id": "sg-0fc501d506ced4f2b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0027c7b77d3118499"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "Eng48-conrad-bohm-db",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng48-conrad-bohm-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f6d498f004a4df1"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_cb"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-069b11bc09eb3bda8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-069b11bc09eb3bda8",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-conrad-bohm-app"
            },
            "vpc_id": "vpc-06f6d498f004a4df1"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-027a19961945622b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-027a19961945622b6",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-conrad-bohm-db"
            },
            "vpc_id": "vpc-06f6d498f004a4df1"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-06f6d498f004a4df1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f284c65d5b8af1a0",
            "default_route_table_id": "rtb-0366b1327acec3861",
            "default_security_group_id": "sg-0d4b4710ab87d422d",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06f6d498f004a4df1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0366b1327acec3861",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-conrad-bohm-app"
            }
          }
        }
      ]
    }
  ]
}